# newsroom

./: .gitignore  FILTER_PROFILE.md  README.md  README.zh-CN.md  daily_news_filtered.md  fetch_rss.py  filter_news.py  learn_filter.py  patch_date_parse.py  pyproject.toml  test_fetch_rss.py  test_filter_news.py  test_gemini_api.py  test_learn_filter.py
.github/workflows/: daily-news.yml  deploy-pages.yml
data/: FILTER_PROFILE.md  raw_news_sample.json  seen_links.json
docs/: index.html
docs/assets/css/: style.css
docs/assets/js/: main.js
docs/data/: news.json  news_stats.json
program_docs/: ROADMAP.md  agent_playbook.md  algorithm_notes.md  module_reference.md  project_structure.md  tdd_strategy.md
src/newsroom/: __init__.py  feedback_learning.py  filtering.py  gemini_smoke.py  paths.py  rss.py
tests/: test_feedback_learning.py  test_filtering.py  test_filtering_logic.py  test_rss.py  test_truncate.py
